Kubernetes/Stirling-PDF/yamls/s-pdf.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s-pdf
  labels:
    name: s-pdf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s-pdf        # < name of the deployment
  namespace: s-pdf   # < namespace where place the deployment and pods
  labels:
    app: s-pdf          # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: s-pdf
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: s-pdf
    spec:
      volumes:
      - name: s-pdf-config  # < linkname of the volume for the pvc
        persistentVolumeClaim:
          claimName: s-pdf-config-pvc # < pvc name we created in the previous yaml
      - name: s-pdf-data  # < linkname of the volume for the pvc
        persistentVolumeClaim:
          claimName: s-pdf-data-pvc # < pvc name we created in the previous yaml
      containers:
        - image: frooodle/s-pdf # < the name of the docker image we will use
          name: s-pdf                         # < name of container
          imagePullPolicy: Always             # < always use the latest image when creating container/pod
          ports:                              # < the ports required (see container documentation)
           - containerPort: 8080
             name: http-8080
             protocol: TCP
          volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
           - mountPath: /configs           # < mount location in the container
             name: s-pdf-config               # < volumelabel configured earlier in the yaml file                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
           - mountPath: /usr/share/tesseract-ocr/4.00/tessdata           # < mount location in the container
             name: s-pdf-data               # < volumelabel configured earlier in the yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: s-pdf-service    # < name of the service
  namespace: s-pdf       # < namespace where place the deployment and pods
spec:
  selector:
    app: s-pdf           # < reference to the deployment (connects with this deployment)
  ports:
    - name: http-8080
      protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-s-pdf-https-redirect
  namespace: s-pdf
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-s-pdf-security
  namespace: s-pdf
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-s-pdf-websecure
  namespace: s-pdf 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`s-pdf.urbaman.it`)
      services:
        - name: s-pdf-service
          port: 8080
          serversTransport: traefik-s-pdf-transport
      middlewares:
        - name: traefik-s-pdf-security
  tls:
    secretName: urbaman-s-pdf
    options:
      name: traefik-s-pdf-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-s-pdf-web
  namespace: s-pdf
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`s-pdf.urbaman.it`)
      services:
        - name: s-pdf-service
          port: 8080
      middlewares:
        - name: traefik-s-pdf-https-redirect
